[tool.poetry]
name = "market-data-provider"
version = "0.1.0"
description = ""
authors = ["hatef madani <hatefmdn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
asgiref = "^3.5.0"
django-environ = "^0.8.1"
Django = "4"
djangorestframework = "3.13.1"
drf-yasg = "1.20.0"
celery = "^5.2.5"
channels = "^3.0.4"
django-redis = "^5.2.0"
channels-redis = "^3.4.0"
redis = "^4.2.2"
requests = "^2.27.1"
xmltodict = "^0.12.0"
django-extensions = "^3.1.5"
ptpython = "^3.0.20"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
